* added dependency in ext_emconf.php PHP 5.3.
* little behaviour change: Now the current month ist pre-selected when entering the single month view, not the whole year (“all months”).
* bugfix: After manual grouping of the resultset we have to resort our array.
* moved changelog to "Changelog" file in the extension folder instead of keeping it in doc/manual.sxw.

Version 1.1.1 (2012/10)
* made ke_stats compatible with TYPO3 6.0

Version 1.1.0 (2012/02)
* Update ist recommended since users with firefox 8 and above are not counted in versions before!
* added new robots and browsers. firefox version 5 and above is now counted as one browser. Future versions of firefox will automatically be recognized.
* Design: Backend module layout improvements.
* Overview now page shows the past 12 months plus the current month. Formally it showed only the last 12 months.
* Bufix: made be module compatible with version 4.6, removed call to t3lib_div::fixed_lgd_pre.
* Bugfix: made filecounter compatible with version 4.6. Changed backend tab name to “Downloads” instead of “downloads”.
* Bugfix: searchwords work now with UTF-8 sites. Thanks to Fabio Baer.
* added a new hook to modify the description col of the result table: modifyDescriptionColOfTable
* now you can choose "all months" in selectbox
* filecounter rewritten. Now we used some more arrays and TYPO3-API. 3 new functions. 2 new hooks in filecounter:
* modifyPathArray: Explodes the current path into directories. This is useful, when you want to save directory names like "DE", "EN", ... into db
* modifyFileDataBeforeQueue

Version 1.0.0 (2011/04)
* switched version number to 1.0.0. No other changes.

Version 0.6.4 (2011/04)
* new configuration option: Use Caching in backend module.
* Switched status to stable
* new icon and backend module title

Version 0.6.3 (2011/03)
* new user agent strings (firefox 4, ipod and more)

Version 0.6.2 (2011/03)
* bugfix: date was missing in live tracking (backend module)
